# umuannotator

./: .gitignore  README.md  console  pyproject.toml
configs/: food_en.yml  news.yml  pizza.yml  pizza_rich.yml
datasets/: food_en.csv  pizza_es.csv
outputs/: pizza.html  pizza.json  pizza_config.json  pizza_ner.json  pizza_regex.html  pizza_regex.json  pizza_rich.json  pizza_temporal.json  pizza_tfidf.json  pizza_tfidf_extended.json  results.html  results.json
resources/: food_en.owl  news_es.owl  pizza.owl  pizza_regex.yml  pizza_rich.owl
resources/patterns/: news_es.yml
src/umuannotator/: cli.py
src/umuannotator/annotators/: dbpedia.py  duckling.py  ontology.py  overlap.py  pattern.py  quantity.py  regex.py  registry.py  stanza_ner.py  stanza_utils.py  temporal.py
src/umuannotator/cli/: main.py  metrics.py  ontology.py  preprocess.py  render.py
src/umuannotator/config/: loader.py  model.py
tests/: test_annotation_pipeline.py  test_annotation_resolver.py  test_cli_metrics_explain.py  test_dataframe_io.py  test_extended_tfidf.py  test_io_loader.py  test_io_output.py  test_metrics_extended_salience.py  test_metrics_ontology_expansion.py  test_metrics_output.py  test_metrics_salience.py  test_metrics_summary.py  test_ontology.py  test_ontology_annotator_matching.py  test_overlap.py  test_pipeline.py  test_pipeline_texts.py  test_quantity_annotator.py  test_runner.py  test_runner_resolver.py  test_semantic_relations.py  test_serialization_profiles.py  test_stanza_preprocessor.py  test_stanza_utils.py  test_temporal.py  test_tfidf.py
(+51 files in other folders)
