[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umuannotator"
version = "0.1.0"
description = "Semantic annotation framework for ontologies and NLP resources"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "rdflib",
    "owlready2",
    "networkx",
    "pydantic",
    "typer",
    "rich",
    "diskcache"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
umuannotator = "umuannotator.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]