[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umuannotator"
version = "0.1.0"
description = "Semantic annotation framework for ontologies and NLP resources"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "rdflib",
    "owlready2",
    "networkx",
    "pydantic",
    "typer",
    "rich",
    "diskcache",
    "dateparser"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

stanza = [
    "stanza"
]

[project.scripts]
umuannotator = "umuannotator.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]